fix scroll on iphone due to height and refactor colors

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,10 @@
 @import "../breakpoints.scss";
 
+
 .container {
   width: 100%;
-  height: calc(100% - 56px);
+  max-height: 100vh;
+
 
   @media screen and (min-width: #{$md}) {
     height: 100%;
@@ -18,6 +20,7 @@
 .app-container {
   width: 100%;
   height: 100%;
+  overflow: auto;
 
   @media screen and (min-width: #{$md}) {
     width: 65%;
