--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,3 +1,5 @@
+@import '../../../colors.scss';
+
 .app-menu {
   margin-top: 48px;
   margin-bottom: 72px;
@@ -25,7 +27,7 @@
       padding: 8px;
       text-decoration: none;
       vertical-align: middle;
-      color: rgba(50, 50, 50, 0.8);
+      color: $lighter-gray-900;
 
       &:hover,
       &:focus,
