--- a/src/app/components/social/social.component.scss
+++ b/src/app/components/social/social.component.scss
@@ -1,7 +1,18 @@
+@import '../../../colors.scss';
+
 .social-icon {
   width: 32px;
   height: 32px;
 }
+
+mat-icon {
+  ::ng-deep {
+    svg {
+      fill: $lighter-gray-900;
+    }
+  }
+}
+
 
 .social-container {
   &:hover {
@@ -9,11 +20,11 @@
   }
   a {
     text-decoration: none;
-    color: rgba(50, 50, 50, 0.8);
+    color: $lighter-gray-900;
   }
   ::ng-deep {
     span {
-      color: rgba(50, 50, 50, 0.8);
+      color: $lighter-gray-900;
     }
   }
 }
