--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,8 +5,13 @@
 }
 html,
 body {
-  height: 100%;
+  height: 100vh;
 }
+
+app-root {
+  height: 100vh;
+}
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
